# zf_game_template

./: .gitignore  CMakeLists.txt  zf_asset_build_instrs.json
scripts/windows_ninja/: run_debug.ps1  run_release.ps1  run_zf_tests.ps1
src/: game.cpp  game.h
